--- a/public/global.css
+++ b/public/global.css
@@ -7,7 +7,81 @@
 }
 
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  /*font-family: Arial, Helvetica, sans-serif;*/
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 62.5%;
   box-sizing: border-box;
+}
+
+body {
+  background-color: #000;
+  color: #fff;
+  padding: 2rem;
+  text-align: center;
+  border: 20px solid transparent;
+  border-image: url("./images/wood.jpg") 30 30 stretch;
+  min-height: 100vh;
+}
+
+.text {
+  font-size: 2.5rem;
+  margin-bottom: 4rem;
+  animation: text 2s ease-out infinite;
+  text-shadow: 2px 2px 2px #f00, -2px -2px 2px #f00;
+  font-style: italic;
+}
+
+@keyframes text {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.5);
+  }
+}
+
+.player {
+  min-width: 20rem;
+  padding: .5rem 1rem;
+  background-image: url(../images/wood.jpg);
+  color: #fff;
+  text-shadow: 2px 2px 2px #000, -2px -2px 2px #000;
+  font-size: 2rem;
+  border-radius: 5px;
+  font-weight: bold;
+  outline: 3px solid #fff;
+  background-color: rgb(0, 0, 0);    
+}
+
+.player:hover {
+  background-image: none;
+  color: #fff;
+}
+.player:not(:last-child) {
+  margin-right: 3rem;
+}
+
+@media screen and (max-width: 450px) {
+
+  body {
+    max-height: 100vh;
+  }
+
+  .player:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 3rem;
+  } 
+
+  .text {
+    animation: text 2s ease-out infinite;
+  }
+
+  @keyframes text {
+    0% {
+      transform: scale(0.8);
+    }
+    100% {
+      transform: scale(1.2);
+    }
+  }
 }
