--- a/public/global.css
+++ b/public/global.css
@@ -7,8 +7,7 @@
 }
 
 html {
-  /*font-family: Arial, Helvetica, sans-serif;*/
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Patrick Hand', cursive;
   font-size: 62.5%;
   box-sizing: border-box;
 }
