--- a/public/global.css
+++ b/public/global.css
@@ -6,6 +6,10 @@
   box-sizing: inherit;
 }
 
+:root {
+  --image: url("https://i.ibb.co/B64zFMQ/wood.jpg");
+}
+
 html {
   font-family: 'Patrick Hand', cursive;
   font-size: 62.5%;
@@ -18,7 +22,7 @@ body {
   padding: 2rem;
   text-align: center;
   border: 20px solid transparent;
-  border-image: url("./images/wood.jpg") 30 30 stretch;
+  border-image: var(--image) 30 30 stretch;
   min-height: 100vh;
 }
 
@@ -42,7 +46,7 @@ body {
 .player {
   min-width: 20rem;
   padding: .5rem 1rem;
-  background-image: url(../images/wood.jpg);
+  background-image: var(--image);
   color: #fff;
   text-shadow: 2px 2px 2px #000, -2px -2px 2px #000;
   font-size: 2rem;
