fix animation (less animated), (fb forum fcc) removed loop begin in-game changed text infinite animation to forwards removed rotation in start menu

--- a/public/global.css
+++ b/public/global.css
@@ -29,7 +29,7 @@ body {
 .text {
   font-size: 2.5rem;
   margin-bottom: 4rem;
-  animation: text 2s ease-out infinite;
+  animation: text 1.5s ease-out forwards;
   text-shadow: 2px 2px 2px #f00, -2px -2px 2px #f00;
   font-style: italic;
 }
@@ -76,7 +76,7 @@ body {
   } 
 
   .text {
-    animation: text 2s ease-out infinite;
+    animation: text 2s ease-out forwards;
   }
 
   @keyframes text {
